0.20.x/_sources/api/skimage.restoration.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`restoration`
==========================
.. automodule:: skimage.restoration

.. currentmodule:: skimage.restoration
.. autosummary::

   skimage.restoration.ball_kernel
   skimage.restoration.calibrate_denoiser
   skimage.restoration.cycle_spin
   skimage.restoration.denoise_bilateral
   skimage.restoration.denoise_nl_means
   skimage.restoration.denoise_tv_bregman
   skimage.restoration.denoise_tv_chambolle
   skimage.restoration.denoise_wavelet
   skimage.restoration.ellipsoid_kernel
   skimage.restoration.estimate_sigma
   skimage.restoration.inpaint_biharmonic
   skimage.restoration.richardson_lucy
   skimage.restoration.rolling_ball
   skimage.restoration.unsupervised_wiener
   skimage.restoration.unwrap_phase
   skimage.restoration.wiener



ball_kernel
-----------

.. autofunction:: skimage.restoration.ball_kernel


.. include:: skimage.restoration.ball_kernel.examples

calibrate_denoiser
------------------

.. autofunction:: skimage.restoration.calibrate_denoiser


.. include:: skimage.restoration.calibrate_denoiser.examples

cycle_spin
----------

.. autofunction:: skimage.restoration.cycle_spin


.. include:: skimage.restoration.cycle_spin.examples

denoise_bilateral
-----------------

.. autofunction:: skimage.restoration.denoise_bilateral


.. include:: skimage.restoration.denoise_bilateral.examples

denoise_nl_means
----------------

.. autofunction:: skimage.restoration.denoise_nl_means


.. include:: skimage.restoration.denoise_nl_means.examples

denoise_tv_bregman
------------------

.. autofunction:: skimage.restoration.denoise_tv_bregman


.. include:: skimage.restoration.denoise_tv_bregman.examples

denoise_tv_chambolle
--------------------

.. autofunction:: skimage.restoration.denoise_tv_chambolle


.. include:: skimage.restoration.denoise_tv_chambolle.examples

denoise_wavelet
---------------

.. autofunction:: skimage.restoration.denoise_wavelet


.. include:: skimage.restoration.denoise_wavelet.examples

ellipsoid_kernel
----------------

.. autofunction:: skimage.restoration.ellipsoid_kernel


.. include:: skimage.restoration.ellipsoid_kernel.examples

estimate_sigma
--------------

.. autofunction:: skimage.restoration.estimate_sigma


.. include:: skimage.restoration.estimate_sigma.examples

inpaint_biharmonic
------------------

.. autofunction:: skimage.restoration.inpaint_biharmonic


.. include:: skimage.restoration.inpaint_biharmonic.examples

richardson_lucy
---------------

.. autofunction:: skimage.restoration.richardson_lucy


.. include:: skimage.restoration.richardson_lucy.examples

rolling_ball
------------

.. autofunction:: skimage.restoration.rolling_ball


.. include:: skimage.restoration.rolling_ball.examples

unsupervised_wiener
-------------------

.. autofunction:: skimage.restoration.unsupervised_wiener


.. include:: skimage.restoration.unsupervised_wiener.examples

unwrap_phase
------------

.. autofunction:: skimage.restoration.unwrap_phase


.. include:: skimage.restoration.unwrap_phase.examples

wiener
------

.. autofunction:: skimage.restoration.wiener


.. include:: skimage.restoration.wiener.examples

