0.25.x/_sources/api/skimage.restoration.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`skimage.restoration`
==========================

.. automodule:: skimage.restoration

.. currentmodule:: skimage.restoration

.. autosummary::
   :nosignatures:

   ball_kernel
   calibrate_denoiser
   cycle_spin
   denoise_bilateral
   denoise_invariant
   denoise_nl_means
   denoise_tv_bregman
   denoise_tv_chambolle
   denoise_wavelet
   ellipsoid_kernel
   estimate_sigma
   inpaint_biharmonic
   richardson_lucy
   rolling_ball
   unsupervised_wiener
   unwrap_phase
   wiener



------------


.. autofunction:: ball_kernel

    .. minigallery:: skimage.restoration.ball_kernel

------------


.. autofunction:: calibrate_denoiser

    .. minigallery:: skimage.restoration.calibrate_denoiser

------------


.. autofunction:: cycle_spin

    .. minigallery:: skimage.restoration.cycle_spin

------------


.. autofunction:: denoise_bilateral

    .. minigallery:: skimage.restoration.denoise_bilateral

------------


.. autofunction:: denoise_invariant

    .. minigallery:: skimage.restoration.denoise_invariant

------------


.. autofunction:: denoise_nl_means

    .. minigallery:: skimage.restoration.denoise_nl_means

------------


.. autofunction:: denoise_tv_bregman

    .. minigallery:: skimage.restoration.denoise_tv_bregman

------------


.. autofunction:: denoise_tv_chambolle

    .. minigallery:: skimage.restoration.denoise_tv_chambolle

------------


.. autofunction:: denoise_wavelet

    .. minigallery:: skimage.restoration.denoise_wavelet

------------


.. autofunction:: ellipsoid_kernel

    .. minigallery:: skimage.restoration.ellipsoid_kernel

------------


.. autofunction:: estimate_sigma

    .. minigallery:: skimage.restoration.estimate_sigma

------------


.. autofunction:: inpaint_biharmonic

    .. minigallery:: skimage.restoration.inpaint_biharmonic

------------


.. autofunction:: richardson_lucy

    .. minigallery:: skimage.restoration.richardson_lucy

------------


.. autofunction:: rolling_ball

    .. minigallery:: skimage.restoration.rolling_ball

------------


.. autofunction:: unsupervised_wiener

    .. minigallery:: skimage.restoration.unsupervised_wiener

------------


.. autofunction:: unwrap_phase

    .. minigallery:: skimage.restoration.unwrap_phase

------------


.. autofunction:: wiener

    .. minigallery:: skimage.restoration.wiener

